feat: update handler and swagger for sendOTP and verifyOTP
